layout/base/nsPresContext.h
@@ -75,6 +75,7 @@ class EffectCompositor;
 class Encoding;
 class EventStateManager;
 class CounterStyleManager;
+class OneShotPostRefreshObserver;
 class PresShell;
 class RestyleManager;
 class ServoStyleSet;
@@ -510,6 +511,12 @@ class nsPresContext : public nsISupports, public mozilla::SupportsWeakPtr {
   void SetSafeAreaInsets(const mozilla::ScreenIntMargin& aInsets);
 
   mozilla::ScreenIntMargin GetSafeAreaInsets() const { return mSafeAreaInsets; }
+
+  bool RegisterOneShotPostRefreshObserver(
+      mozilla::OneShotPostRefreshObserver* aObserver);
+  void UnregisterOneShotPostRefreshObserver(
+      mozilla::OneShotPostRefreshObserver* aObserver);
+  void ClearOneShotPostRefreshObservers();
 
  protected:
   void UpdateEffectiveTextZoom();
@@ -1248,6 +1255,9 @@ class nsPresContext : public nsISupports, public mozilla::SupportsWeakPtr {
 
   // During page load we use slower frame rate.
   uint32_t mNextFrameRateMultiplier;
+
+  nsTArray<RefPtr<mozilla::OneShotPostRefreshObserver>>
+      mOneShotPostRefreshObservers;
 
   ScrollStyles mViewportScrollStyles;
 
